use case options

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body style="background-color: #333333;">
@@ -16,22 +16,22 @@
           <img src="./assets/finfra-logo.svg" alt="">
 
         </div>
-        <div class="mt-3 mt-md-5 px-3 welcome-msg">
+        <div class="mt-4 mt-md-5 px-3 welcome-msg">
           <span class="text-white">We're so </span>
           <span class="text-primary"> excited</span>
           <span class="text-white">for you to join us!</span>
         </div>
       </div>
 
-      <div class="col-12 col-md-8 bg-white mt-3 mt-md-0"
+      <div class="col-12 col-md-8 bg-white mt-md-0"
         style="border-top-left-radius: 16px; border-bottom-left-radius: 16px;">
         <div class="align-self-center d-flex flex-column h-100 justify-content-center p-3 p-md-5">
           <div class="row">
-            <div class="col">
+            <div class="col-12 col-md-6">
               <label class="form-label">First name</label>
               <input type="text" class="form-control" placeholder="First name">
             </div>
-            <div class="col">
+            <div class="col-12 col-md-6">
               <label class="form-label">Last name</label>
               <input type="text" class="form-control" placeholder="Last name">
             </div>
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="w-100 text-center mt-3">
-            <button class="btn btn-dark px-5">Next</button>
+            <a class="btn btn-dark px-5" href="/pages/whats-your-need.html">Next</a>
           </div>
         </div>
       </div>
