--- a/pages/whats-your-need.html
+++ b/pages/whats-your-need.html
@@ -89,7 +89,7 @@
           </div>
           <div class="modal-footer text-center d-flex justify-content-center">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Continue</button>
+            <a class="btn btn-primary" href="./step-1.html">Continue</a>
           </div>
         </div>
       </div>
